# omega

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: deploy.yml
bausteinsicht/: index.html
docs/: bausteinsicht.md  componentsview.md  schneider.css  systemkontext.md
docs/images/bausteinsicht/: .$bausteinsicht.drawio.bkp  bausteinsicht.drawio
images/systemkontext/: systemkontext.drawio
search/: search_index.json
systemkontext/: index.html
