[tool.poetry]
name = "omega"
version = "0.1.0"
description = "OMEGA Framework"
authors = ["Frank Schumann <frank.schumann.76@gmail.com>"]
license = "UNLICENSED"

[tool.poetry.dependencies]
python = "^3.9"
mkdocs = "^1.3.0"
mkdocs-material = "^8.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
